--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: 'CustomFont';
-  src: url('https://www.nuttyai.tech/_next/static/media/8de40de8211748f7-s.p.woff2') format('truetype');
+  src: url('https://www.Cogniqai.tech/_next/static/media/8de40de8211748f7-s.p.woff2') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
